fix: Fixing merge for 0.2.3