@@ -1,13 +1,15 @@
 package com.pedrorok.hypertube.core.travel;
 
+import com.pedrorok.hypertube.network.NetworkHandler;
 import com.pedrorok.hypertube.network.packets.EntityTravelDirDataPacket;
 import com.pedrorok.hypertube.network.packets.SyncEntityPosPacket;
 import lombok.Getter;
 import net.minecraft.core.BlockPos;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
-import net.neoforged.neoforge.network.PacketDistributor;
+import net.minecraftforge.network.PacketDistributor;
 
 import java.util.List;
 import java.util.function.BiConsumer;
@@ -30,19 +32,21 @@ public class TravelPathMover {
     private double totalDistance;
     private double traveled;
 
-    private boolean finished = false;
-
     private Vec3 lastDirection = Vec3.ZERO;
 
-    public TravelPathMover(Vec3 entityPos, List<Vec3> points, float travelSpeed, BlockPos lastPos, BiConsumer<LivingEntity, Boolean> onFinishCallback) {
+    private final LivingEntity entity;
+
+    public TravelPathMover(LivingEntity entity, List<Vec3> points, float travelSpeed, BlockPos lastPos, BiConsumer<LivingEntity, Boolean> onFinishCallback) {
+        this.entity = entity;
         this.pathPoints = points;
         this.travelSpeed = travelSpeed / 20f;
         this.lastPos = lastPos;
 
-        this.currentStart = entityPos;
-        this.currentEnd = pathPoints.getFirst().subtract(0, 0.25, 0);
+        this.currentStart = entity.position();
+        this.currentEnd = pathPoints.get(0).subtract(0, 0.25, 0);
         this.totalDistance = currentStart.distanceTo(currentEnd);
         this.traveled = 0;
+        this.lastDirection = pathPoints.get(pathPoints.size() - 1).subtract(pathPoints.get(pathPoints.size() - 2)).normalize();
 
         this.onFinishCallback = onFinishCallback;
     }
@@ -55,7 +59,7 @@ public class TravelPathMover {
 
         if (traveled >= totalDistance) {
             currentSegment++;
-            if (currentSegment >= pathPoints.size() || finished) {
+            if (currentSegment >= pathPoints.size()) {
                 onFinishCallback.accept(entity, false);
                 return;
             }
@@ -63,7 +67,6 @@ public class TravelPathMover {
             currentEnd = pathPoints.get(currentSegment).subtract(0, 0.25, 0);
             totalDistance = currentStart.distanceTo(currentEnd);
             traveled = 0;
-            lastDirection = currentEnd.subtract(pathPoints.get(currentSegment-1)).normalize();
         }
 
         Vec3 direction = currentEnd.subtract(currentStart).normalize().scale(travelSpeed);
@@ -74,7 +77,9 @@ public class TravelPathMover {
 
         handleEntityDirection(entity, direction);
         if (entity instanceof Player) return;
-        PacketDistributor.sendToPlayersTrackingEntity(entity, SyncEntityPosPacket.create(entity, currentSegment));
+        NetworkHandler.INSTANCE.send(PacketDistributor.TRACKING_ENTITY.with(() -> entity),
+                SyncEntityPosPacket.create(entity, currentSegment)
+        );
     }
 
 
@@ -84,7 +89,7 @@ public class TravelPathMover {
         entity.setYRot(yaw);
         entity.setXRot(pitch);
         if (entity.level().isClientSide) return;
-        PacketDistributor.sendToPlayersTrackingEntity(entity, EntityTravelDirDataPacket.create(entity));
+        NetworkHandler.INSTANCE.send(PacketDistributor.TRACKING_ENTITY.with(() -> entity), EntityTravelDirDataPacket.create(entity));
     }
 
     public Vec3 getLastDir() {
@@ -92,6 +97,6 @@ public class TravelPathMover {
     }
 
     public void setClientFinish() {
-        finished = true;
+        onFinishCallback.accept(entity, false);
     }
 }
